--- a/01-html-git-css/code-drills/06-core-css-box-model/challenge-prompt.html
+++ b/01-html-git-css/code-drills/06-core-css-box-model/challenge-prompt.html
@@ -10,28 +10,30 @@
 <style>
     /* =========================== */
     /* select every div element for styling*/
-
+    div {
         /* create a padding of 50px*/
-    
+        padding: 50px;
+    }
     /* =========================== */
             
     /* =========================== */
     /* select every p element for styling */
-
+    p {
         /* add a margin of 0 */
-
+        margin: 0;
         /* add a padding of 15px */
- 
+        padding: 15px;
         /* add a font-size of 20px */
-
+        font-size: 20px;
+    }
     /* =========================== */
 
     /* =========================== */
     .red-textbox-left {
         /* seperate the red box from the yellow with a 200px margin between them */
-
+        margin-top: 200px;
         /* add a margin of 50px to the left of this element*/
-
+        margin-left: 50px;
         float: left;
         background-color: red;
     }
@@ -40,7 +42,7 @@
     /* =========================== */
     .blue-textbox-right {
         /* add a margin of 50px to the right of this element*/
-
+        margin-right: 50px;
         float: right;
         background-color: blue;
     }
@@ -49,7 +51,7 @@
     /* =========================== */
     .yellow-textbox-initial {
         /* add a margin of 50px to the bottom of this element*/
-
+        margin-bottom: 50px;
         float: initial;
         background-color: yellow;
     }
@@ -58,7 +60,7 @@
     /* =========================== */
     .green-textbox-clear {
         /* seperate the green box from the others with a 200px margin between them */
-
+        margin-top: 250px;
         background-color: green;
         clear: both;
     }
