--- a/01-html-git-css/code-drills/09-core-css-float/challenge-prompt.html
+++ b/01-html-git-css/code-drills/09-core-css-float/challenge-prompt.html
@@ -13,33 +13,30 @@
         padding: 20px;
         width: 300px;
         margin: 20px;
-
-        background-color: black;
+        background-color: red;
         /* Float this element to the left */
-
+        float: left;
+        /* float: right; */
     }
 
     #yellow-textbox {
         padding: 20px;
         width: 300px;
         margin: 20px;
-
-        background-color: purple;
-
+        background-color: yellow;
         /* Float this element to the right */
-
+        float: right;
     }
 
     .blue-textbox {
         padding: 20px;
         width: 300px;
         margin: 20px;
-
-        background-color: green;
-        
+        background-color: blue;
         /* Clear the float for this element so it appears below the red and yellow boxes */
-
-    }
+        clear: both;
+           /* float: left; */
+            }
 
     
 </style>
@@ -47,19 +44,19 @@
 <body>
 
     <!-- Add classes and IDs to the divs -->
-    <div>
+    <div id="red-textbox">
         <p>I'm a red text box</p>
     </div>
 
-    <div>
+    <div id="yellow-textbox">
         <p>I'm a yellow text box</p>
     </div>
 
-    <div>
+    <div class="blue-textbox">
         <p>I'm a blue text box</p>
     </div>
 
-    <div>
+    <div class="blue-textbox">
         <p>I'm a blue text box</p>
     </div>
 
